--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^6.0.3",
     "@aspnet/signalr": "^1.0.4",
     "@auth0/angular-jwt": "^2.0.0",
+    "angular": "^1.8.2",
     "angularfire2": "^5.1.0",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
@@ -35,10 +36,9 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
     "@angular-devkit/build-angular": "~0.6.8",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.8",
+    "@angular/cli": "^6.0.8",
+    "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -53,6 +53,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
